# GameLift

./: .gitignore  LICENSE  README.md
Cocos2dxGameClient/: README.md
Cocos2dxGameClient/Classes/: GameLiftManager.cpp  GameLiftManager.h  HelloWorldScene.cpp  HelloWorldScene.h  TcpClient.cpp  TcpClient.h
Cocos2dxGameClient/cocos2d/: Readme.txt
Cocos2dxGameClient/proj.win32/: CocosGameClient.vcxproj  CocosGameClient.vcxproj.filters  UserDefault.xml  main.cpp  packages.config
DummyClients/: DummyClients.sln  match_ruleset.json
DummyClients/DummyClients/: CircularBuffer.cpp  DummyClients.cpp  DummyClients.h  DummyClients.vcxproj  DummyClients.vcxproj.filters  DummyClientsLog.txt  Exception.cpp  FastSpinlock.cpp  Job.h  (+28 more)
GameLiftGameServer/: GameLiftGameServer.sln
GameLiftLinuxServer/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  ClientManager.cpp  ClientManager.h  ClientSession.cpp  ClientSession.h  Config.h  GameLiftManager.cpp  GameLiftManager.h  Log.cpp  Log.h  PacketHandler.cpp  Scheduler.cpp  Scheduler.h  Utils.h  main.cpp
GameLiftLinuxServer/include/aws/gamelift/common/: GameLiftErrors.h
GameLiftLinuxServer/include/aws/gamelift/internal/: GameLiftServerState.h
GameLiftLinuxServer/include/aws/gamelift/internal/network/: AuxProxyMessageSender.h  Network.h
GameLiftLinuxServer/include/aws/gamelift/server/: GameLiftServerAPI.h  ProcessParameters.h
GameLiftLinuxServer/include/aws/gamelift/server/model/: GameProperty.h  PlayerSessionCreationPolicy.h
GameLiftLinuxServer/include/aws/gamelift/server/protocols/: sdk.pb.h
PacketShare/: PacketType.h
(+148 files in other folders)
